Fix footer overflow

--- a/frontend/src/layout/Footer/styles.module.scss
+++ b/frontend/src/layout/Footer/styles.module.scss
@@ -1,6 +1,8 @@
 @import '@/styles/base';
 
 .footer {
+  overflow: hidden;
+  
   &.theme_dark {
     background-color: var(--color-primary-dark-base);
     color: var(--color-total-white);
